src/tests/snapshots/nyx__tests__window_opening__check_target_size@dhF500-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 632 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 492, bounds: 1272 × 712, states: [Activated]
